@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.134 2005/04/11 19:59:19 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.135 2005/04/12 04:07:39 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Finish overhaul of backend partitioning code.
+  Finish overhaul of backend partitioning code. Fixed all bugs that stood in
+  the way of partitioning from a blank disk.
 
   10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   tidy_partitions() function in GLIStorageDevice. Tweaks to tidy code
